Modified the code for the flattening the input

--- a/MNIST_2_5.ipynb
+++ b/MNIST_2_5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4cpOPW/cRfhIObwKdpLeX",
+      "authorship_tag": "ABX9TyO4hjKq6CrmdBnZaW7xevSo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1786,7 +1786,8 @@
         "        x = self.pool2(F.relu(self.conv4(F.relu(self.conv3(x)))))\n",
         "        x = F.relu(self.conv6(F.relu(self.conv5(x))))\n",
         "        x = F.relu(self.conv7(x))\n",
-        "        x = x.view(-1, 10)\n",
+        "        #x = x.view(-1, 10)\n",
+        "        x = torch.flatten(x,1)\n",
         "        new_x = torch.cat((x, rand_num), dim=1)\n",
         "\n",
         "        new_x = self.fc2(F.relu(self.fc1(new_x))) \n",
@@ -1796,7 +1797,7 @@
       "metadata": {
         "id": "euPAeoD4cX-C"
       },
-      "execution_count": 7,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1816,7 +1817,7 @@
       "metadata": {
         "id": "fziFUkXlfp4o"
       },
-      "execution_count": 8,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1872,14 +1873,14 @@
       "metadata": {
         "id": "epCuYgXEg3wD"
       },
-      "execution_count": 14,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "model = Network().to(device)\n",
-        "optimizer = optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
+        "optimizer = optim.SGD(model.parameters(), lr=0.005, momentum=0.95)\n",
         "\n",
         "for epoch in range(1, 5):\n",
         "    train(model, device, train_loader, optimizer, epoch)\n",
@@ -1890,64 +1891,64 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Eq9Civ92ifao",
-        "outputId": "4c3b188e-f94b-48f1-f78f-0e62c494072a"
+        "outputId": "60f0363e-6a94-4cb6-a194-5df0a2d89fd1"
       },
-      "execution_count": 20,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "loss=1.0637370347976685 batch_id=468: 100%|██████████| 469/469 [00:28<00:00, 16.18it/s]\n"
+            "loss=0.32161745429039 batch_id=468: 100%|██████████| 469/469 [00:29<00:00, 15.93it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 1.022, MNIST Accuracy:65.18, Addition_Accuracy:7.79\n"
+            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 0.321, MNIST Accuracy:86.83, Addition_Accuracy:9.0\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "loss=0.5416896343231201 batch_id=468: 100%|██████████| 469/469 [00:30<00:00, 15.45it/s]\n"
+            "loss=0.3808058202266693 batch_id=468: 100%|██████████| 469/469 [00:29<00:00, 15.93it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 0.672, MNIST Accuracy:75.89, Addition_Accuracy:7.82\n"
+            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 0.302, MNIST Accuracy:87.39, Addition_Accuracy:9.09\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "loss=0.4748753607273102 batch_id=468: 100%|██████████| 469/469 [00:29<00:00, 16.11it/s]\n"
+            "loss=0.4174554646015167 batch_id=468: 100%|██████████| 469/469 [00:29<00:00, 15.96it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 0.372, MNIST Accuracy:86.4, Addition_Accuracy:9.09\n"
+            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 0.296, MNIST Accuracy:87.62, Addition_Accuracy:8.7\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "loss=0.390163391828537 batch_id=468: 100%|██████████| 469/469 [00:29<00:00, 16.07it/s]\n"
+            "loss=0.20930629968643188 batch_id=468: 100%|██████████| 469/469 [00:29<00:00, 16.06it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 0.312, MNIST Accuracy:88.08, Addition_Accuracy:8.85\n"
+            "<torch.utils.data.dataloader.DataLoader object at 0x7f69288a3e20> set: Average loss: 0.289, MNIST Accuracy:87.76, Addition_Accuracy:8.36\n"
           ]
         }
       ]
